--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-modal": "^3.8.1",
     "react-onepage": "^1.1.0",
     "react-page-slides": "^0.1.3",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.0",
     "react-slick": "^0.24.0",
     "react-spring": "7",
