--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-modal": "^3.8.1",
     "react-onepage": "^1.1.0",
     "react-page-slides": "^0.1.3",
-    "react-scripts": "3.0.0",
+    "react-scripts": "^3.0.0",
     "react-slick": "^0.24.0",
     "react-spring": "7",
     "slick-carousel": "^1.8.1",
@@ -47,6 +47,6 @@
   },
   "homepage": "http://hsin2205.github.io/portfolio",
   "devDependencies": {
-    "gh-pages": "^2.1.1"
+    "gh-pages": "^2.2.0"
   }
 }
